Test Java FTP (upload image)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/LostItemProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-io-2.5.jar=..\\..\\LostItemKanameTest\\lib\\commons-io-2.5.jar
+file.reference.commons-net-3.6.jar=..\\..\\LostItemKanameTest\\lib\\commons-net-3.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-net-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
